# SparseTriton

./: .gitignore  DEBUG_SUMMARY.md  DOCSTRING_RULES.md  README.md  benchmark_hashtable.py  benchmark_spconv_vs_sparsetriton.py  debug_pooling.py  pyproject.toml  tmp.ipynb  tmp.py  todo.md
examples/: Untitled-1.py  benchmark_hashtable.py  model_net_demo copy.ipynb  model_net_demo.ipynb  second_sparse_conv_example.py
examples/Oakland3D/training_data/training/wrl/: oakland_part3_an_all_points.wrl  oakland_part3_an_training.wrl
examples/Oakland3D/validation_data/validation/: oakland_part3_am.xyz_label_conf
examples/Oakland3D/validation_data/validation/stats/: oakland_part3_am.stats
examples/Oakland3D/validation_data/validation/vrml/: vrmlview.ini
sparsetriton/: __init__.py  config.py  conv3d.py  tensor.py
sparsetriton/nn/: __init__.py
sparsetriton/nn/backbones/: __init__.py  resnet.py
sparsetriton/nn/functional/: __init__.py  hash.py  norm.py  spatial.py
sparsetriton/nn/functional/conv/: __init__.py  conv.py  conv3d.py  kmap.py
sparsetriton/nn/functional/conv/funcs/: __init__.py  im2col_gemm.py  implicit_gemm.py  implicit_hashfly_gemm.py  implicit_hashmap_gemm.py  implicit_precomputed_gemm.py
sparsetriton/nn/modules/: __init__.py  activation.py  blocks.py  conv.py  linear.py  norm.py  spatial.py
sparsetriton/utils/: __init__.py  hash.py  test_sparsetriton.py  to_dense.py  utils.py
sparsetriton/utils/spatial/: __init__.py  tile.py
tests/: __init__.py  conftest.py  simple_test.py  test_config.py  test_conv.py  test_correctness_vs_spconv.py  test_nn_functional.py  test_nn_modules.py  test_pooling.py  test_sparse_conv.py  test_tensor.py  test_utils.py  test_utils_hash.py
